# nodule-segmentation

./: README.md  advanced_grid_search.py  count_nodules.py  get_stats.py  gridsearch.py  gridsearch_with_index.py  nodule_model_training_walkthrough_clean.py  pyproject.toml  reorganize_data_folders.py  train.py  train_warmup_cooldown.py  visualize.py  visualize_counts.py
data/: index.csv  update_index.py
data/Achnacarry/: cr0_659819700prc_f0832796ccam04954l1.tif
data/Addiewell/: cr0_602209438prc_f0732394ccam03306l2.tif
data/Ayre_of_Tonga/: cr0_661067394prc_f0841360ccam02969l1.tif
data/Back_Bay/: cr0_648546989prc_f0821978ccam02826l1.tif
data/Badcall_ccam/: cr0_614993940prc_f0761384ccam02450l1.tif  cr0_614994852prc_f0761384ccam02450l1.tif
data/Balgy/: cr0_632309033prc_f0781442ccam01645l1.tif
data/Barns_Ness/: cr0_629286033prc_f0780216ccam04611l1.tif
data/Ben_Hee/: cr0_660263238prc_f0840540ccam01960l1.tif
data/Bishops_Palace/: cr0_649796665prc_f0822176ccam01842l1.tif
data/Breck/: cr0_658322474prc_f0831278ccam01938l1.tif
data/Brothers_Point/: cr0_645983559prc_f0802388ccam02799l1.tif
data/Buzzard/: cr0_606023693prc_f0750000ccam03349l2.tif
data/Cairnwell/: cr0_606645750prc_f0750456ccam02356l2.tif
data/Campsie_Fells/: cr0_634959234prc_f0790000ccam06673l1.tif
data/Catpund/: cr0_655916651prc_f0822188ccam03911l1.tif
data/Clickimin/: cr0_658661943prc_f0831584ccam02942l1.tif
data/Cormorant/: cr0_607269301prc_f0751128ccam04363l1.tif
data/Crieff/: cr0_606291887prc_f0750060ccam01352l2.tif
data/Delnabo_2/: cr0_610563526prc_f0751398ccam02400l1.tif
(+53 files in other folders)
